@@ -24,14 +24,17 @@ import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
+import org.apache.solr.client.solrj.impl.CloudHttp2SolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.response.QueryResponse;
@@ -48,8 +51,22 @@ import org.noggit.JSONWriter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class HealthcheckTool extends SolrCloudTool {
+public class HealthcheckTool extends ToolBase {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
+  @Override
+  public List<Option> getOptions() {
+    return List.of(
+        SolrCLI.OPTION_SOLRURL,
+        SolrCLI.OPTION_ZKHOST,
+        Option.builder("c")
+            .argName("COLLECTION")
+            .hasArg()
+            .required(false)
+            .desc("Name of collection; no default.")
+            .longOpt("collection")
+            .build());
+  }
 
   enum ShardState {
     healthy,
@@ -68,18 +85,16 @@ public class HealthcheckTool extends SolrCloudTool {
   }
 
   @Override
-  public List<Option> getOptions() {
-    return List.of(
-        SolrCLI.OPTION_SOLRURL,
-        Option.builder("c")
-            .longOpt("name")
-            .argName("NAME")
-            .hasArg()
-            .required(true)
-            .desc("Name of the collection to check.")
-            .build(),
-        SolrCLI.OPTION_ZKHOST,
-        SolrCLI.OPTION_VERBOSE);
+  public void runImpl(CommandLine cli) throws Exception {
+    SolrCLI.raiseLogLevelUnlessVerbose(cli);
+    String zkHost = SolrCLI.getZkHost(cli);
+    try (CloudHttp2SolrClient cloudSolrClient =
+        new CloudHttp2SolrClient.Builder(Collections.singletonList(zkHost), Optional.empty())
+            .build()) {
+      echoIfVerbose("\nConnecting to ZooKeeper at " + zkHost + " ...", cli);
+      cloudSolrClient.connect();
+      runCloudTool(cloudSolrClient, cli);
+    }
   }
 
   @Override
@@ -87,7 +102,6 @@ public class HealthcheckTool extends SolrCloudTool {
     return "healthcheck";
   }
 
-  @Override
   protected void runCloudTool(CloudSolrClient cloudSolrClient, CommandLine cli) throws Exception {
     SolrCLI.raiseLogLevelUnlessVerbose(cli);
     String collection = cli.getOptionValue("name");
@@ -154,17 +168,20 @@ public class HealthcheckTool extends SolrCloudTool {
           q = new SolrQuery("*:*");
           q.setRows(0);
           q.set(DISTRIB, "false");
-          try (var solrClient = SolrCLI.getSolrClient(coreUrl)) {
-            qr = solrClient.query(q);
+          try (var solrClientForCollection = SolrCLI.getSolrClient(coreUrl)) {
+            qr = solrClientForCollection.query(q);
             numDocs = qr.getResults().getNumFound();
-
-            NamedList<Object> systemInfo =
-                solrClient.request(
-                    new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH));
-            uptime = SolrCLI.uptime((Long) systemInfo.findRecursive("jvm", "jmx", "upTimeMS"));
-            String usedMemory = (String) systemInfo.findRecursive("jvm", "memory", "used");
-            String totalMemory = (String) systemInfo.findRecursive("jvm", "memory", "total");
-            memory = usedMemory + " of " + totalMemory;
+            try (var solrClient = SolrCLI.getSolrClient(replicaCoreProps.getBaseUrl())) {
+              NamedList<Object> systemInfo =
+                  solrClient.request(
+                      new GenericSolrRequest(
+                          SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH));
+              System.out.println("did this work?");
+              uptime = SolrCLI.uptime((Long) systemInfo.findRecursive("jvm", "jmx", "upTimeMS"));
+              String usedMemory = (String) systemInfo.findRecursive("jvm", "memory", "used");
+              String totalMemory = (String) systemInfo.findRecursive("jvm", "memory", "total");
+              memory = usedMemory + " of " + totalMemory;
+            }
 
             // if we get here, we can trust the state
             replicaStatus = replicaCoreProps.getState();
@@ -185,8 +202,9 @@ public class HealthcheckTool extends SolrCloudTool {
       }
 
       ShardHealth shardHealth = new ShardHealth(shardName, replicaList);
-      if (ShardState.healthy != shardHealth.getShardState())
+      if (ShardState.healthy != shardHealth.getShardState()) {
         collectionIsHealthy = false; // at least one shard is un-healthy
+      }
 
       shardList.add(shardHealth.asMap());
     }
